<resources>
    <string name="app_name">Mafia</string>
    <string name="edit_message">Enter a Name</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_create_room">Create Room</string>
    <string name="password_message">Enter Password</string>
    <string name="rooms">Mafia rooms</string>
    <string name="createRoom">Create a Mafia Room</string>
    <string name="createRoomBtn">Create Room</string>
    <string name="message">Enter a message</string>
    <string name="lobbyName">Lobby Name: </string>
    <string name="hasPassword">Is PW Protected: </string>
    <string name="connPlayers">Players connected: </string>
    <string name="listPlayers">List of Players: </string>
    <string name="playersReady">Players ready: </string>
    <string name="update">Refresh</string>
    <string name="join_by_pw">Connect</string>
    <string name="private_room">Private</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="vote_to_night">Vote to skip day</string>
    <string name="unvote_to_night">Unvote to skip day</string>
    <string name="accuse">Accuse</string>
    <string name="vote_on_accuse">Vote</string>
    <string name="noConfirm">I do not confirm</string>
    <string name="confirm">I confirm</string>
    <string name="timeLeft">TimeLeft: </string>
    <string name="role">Role: </string>
    <string name="hidden">Hidden</string>
    <string name="show">Show Role</string>
    <string name="hide">Hide Role</string>
    <string name="showChat">Show Chat</string>
    <string name="hideChat">Hide Chat</string>
    <string name="instructions">Instructions: </string>
    <string name="vote_to_kill">Vote on who to hang. You can only vote once per votesession and a person needs a majority of votes to be hanged</string>
    <string name="rolesInfo">Roles Info</string>
    <string name="send">Send</string>
    <string name="roleButton">Role Action</string>
    <string name="roleButtonDone">Action Made</string>
    <string name="vote_more_day">Prolong Daytime</string>
    <string name="unvote_more_day">Unvote Prolong Daytime</string>
    <string name="IP_login">Set IP:PORT</string>
    <string name="IP_field">IP</string>
    <string name="PORT_field">PORT</string>
    <string name="goMenu">GO TO MENU</string>
</resources>
