<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mafia.mafia.HostActivity">

    <EditText
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/room_error" />

    <EditText
        android:id="@+id/roomPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/password_message"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/roomName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_marginLeft="16dp"
        android:text="*optional"
        app:layout_constraintBottom_toTopOf="@+id/roomPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/roomName"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/playerCap"
        android:layout_width="214dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/roomPassword" />

    <TextView
        android:id="@+id/createTitle"
        android:layout_width="333dp"
        android:layout_height="103dp"
        android:layout_marginTop="16dp"
        android:textSize="32dp"
        android:text="@string/createRoom"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="addRoom"
        android:text="@string/createRoomBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerCap" />

    <TextView
        android:id="@+id/room_error"
        android:layout_width="215dp"
        android:layout_height="22dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/createTitle" />

    <CheckBox
        android:id="@+id/private_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_room"
        app:layout_constraintBaseline_toBaselineOf="@+id/roomPassword"
        app:layout_constraintLeft_toRightOf="@+id/roomPassword"
        android:layout_marginLeft="32dp" />

</android.support.constraint.ConstraintLayout>
