<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mafia.mafia.LobbyActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobbyName"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/lobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasPassword"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connPlayers"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintLeft_toRightOf="@+id/textView5" />

    <TextView
        android:id="@+id/connP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/listPlayers"
        app:layout_constraintBaseline_toBaselineOf="@+id/lobby"
        app:layout_constraintRight_toRightOf="parent" />

    <ListView
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="9dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:id="@+id/list_players" />

    <Button
        android:id="@+id/voteToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="I'm Ready"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/list_players"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/playersReady"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/pReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        android:layout_marginStart="8dp" />

    <ListView
        android:id="@+id/game_msg"
        android:layout_width="348dp"
        android:layout_height="294dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="14dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voteToStart"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <RelativeLayout
        android:layout_width="352dp"
        android:layout_height="82dp"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/sendButton"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textPersonName"
            android:windowSoftInputMode="adjustResize"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="28dp"
            android:onClick="sendMessage"
            android:text="@string/send"
            app:layout_constraintBaseline_toBaselineOf="@+id/message"
            app:layout_constraintLeft_toRightOf="@+id/message"
            app:layout_constraintRight_toRightOf="parent" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
