<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mafia.mafia.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="151dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:text="Test"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:onClick="login"
        android:text="@string/button_login"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/password_login"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#F00"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header1"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/Header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Mafia"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toggleRegister"
        android:text="@string/button_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registerField" />

    <EditText
        android:id="@+id/registerField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="98dp"
        app:layout_constraintTop_toBottomOf="@+id/password_login" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="register"
        android:text="@string/button_register"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintLeft_toRightOf="@+id/password_register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/registerField" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="goBack"
        android:text="Back"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/password_register" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_message"
        android:inputType="textPassword"
        android:text="ABC123abc"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_message"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerField"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/iplogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:onClick="ipLoginListener"
        android:text="@string/IP_login"
        app:layout_constraintBaseline_toBaselineOf="@+id/port_field"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toRightOf="@+id/port_field"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/ip_field"
        android:layout_width="171dp"
        android:layout_height="46dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/IP_field"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Header1" />

    <EditText
        android:id="@+id/port_field"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:hint="@string/PORT_field"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/ip_field"
        app:layout_constraintLeft_toRightOf="@+id/ip_field" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="7dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:text=":"
        app:layout_constraintLeft_toRightOf="@+id/ip_field"
        app:layout_constraintRight_toLeftOf="@+id/port_field"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/Header1" />

</android.support.constraint.ConstraintLayout>
